[project]
name = "econext"
version = "0.1.0"
description = "ecoNEXT Home Assistant integration"
requires-python = ">=3.13.2"
dependencies = ["aiohttp>=3.9.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "homeassistant>=2025.1.0",
    "ruff>=0.14.6",
]
